--- a/nb_template.ipynb
+++ b/nb_template.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Duración:** 2 horas  \n",
     "**Formato:** Competencia por Pull Requests  \n",
-    "**Repositorio base:** _link al repo oficial_\n",
+    "**Repositorio base:** https://github.com/JAlbertoAlonso/gitwars-svm \n",
     "\n",
     "---\n",
     "\n",
