feat: first phase

--- a/nb_template.ipynb
+++ b/nb_template.ipynb
@@ -16,9 +16,10 @@
     "## Portada del equipo\n",
     "\n",
     "**Integrantes:**\n",
-    "- Nombre 1 (Usuario GitHub)\n",
-    "- Nombre 2 (Usuario GitHub)\n",
-    "- Nombre 3 (Usuario GitHub)\n",
+    "- Nombre 1 David Leobardo Pérez Cruz\n",
+    "- Nombre 2 Roberto Jhoshua Alegre ventura\n",
+    "- Nombre 3 Mariano Josué Ahuatzi Pichardo\n",
+    "- Nombre 4 Fabian Herrera Barron\n",
     "\n",
     "**Repositorio del equipo:**  \n",
     "<https://github.com/usuario/codewars-svm>\n",
